--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" href="./files/logo.png"  type="image/gif" sizes="16x16">
-	<title>Aravind Holidays|Best in home stay service</title>
-	<!--Files-->
+	<title>Aravind Holidays | best in service</title>
+	<!--Custom files-->
 	<link rel="stylesheet" href="./files/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./files/style.css">
 	<script src="./files/jquery.min.js.download"></script>
 	<script src="./files/bootstrap.min.js.download"></script>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
 </head>
 <body>
 	<nav class="navbar navbar-default navbar-fixed-top">
@@ -35,7 +36,7 @@
 		</div>
 	</nav>
 	<div class="container-fluid background-cover">
-		<div class="row" id="home">
+		<div  id="home">
 			<h1>Aravind Holidays</h1>
 			<div class="intro-option2">
 				<h1>Best in service</h1>
@@ -44,6 +45,12 @@
 				<div class="explore">Explore us</div>	
 				<div class="booking">Booking</div>
 			</div>
+			<div class="row ">
+				<div class="cover-footer">
+				<div class="col-sm-6 location"><i class="fas fa-map-marker-alt"></i> Wagamon</div>
+				<div class="col-sm-6"><h4>Best place to enjoy beauty of nature</h4></div>
+				</div>
+			</div>
 		</div>
 	</div>
 	<section class="know-more" id="About">
@@ -51,7 +58,7 @@
 		<h1 class="text-center">Know us</h1>
 	</div>
 	<p class="know-para">
-		Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It rvived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+		Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 	</p>
 </section>
 </body>
