--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		</div>
 	</div>
 	<section class="know-more" id="About">
-	<div class="know-us">
+	<div class="know-us knowpara">
 		<h1 class="text-center">Know us</h1>
 	</div>
 	<p class="know-para">
