--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<div  id="home">
 			<h1>Aravind Holidays</h1>
 			<div class="intro-option2">
-				<h1>Best in service</h1>
+				<h4>Homestay | Tour Plan | Adventure</h4>
 			</div>
 			<div class="button-area">
 				<div class="explore">Explore us</div>	
@@ -47,14 +47,14 @@
 			</div>
 			<div class="row ">
 				<div class="cover-footer">
-				<div class="col-sm-6 location"><i class="fas fa-map-marker-alt"></i> Wagamon</div>
-				<div class="col-sm-6"><h4>Best place to enjoy beauty of nature</h4></div>
+				<div class="col-sm-6"></div>
+				<div class="col-sm-6 "><h4>Best place to enjoy  wagamon</h4></div>
 				</div>
 			</div>
 		</div>
 	</div>
 	<section class="know-more" id="About">
-	<div class="know-us knowpara">
+	<div class="know-us">
 		<h1 class="text-center">Know us</h1>
 	</div>
 	<p class="know-para">
