--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 				<div class="col-sm-6 mouse-button">
 					<a href="#About">
 					<div class="mouse_scroll">
+							<a href="#About">
 					<div class="mouse">
 						<div class="wheel"></div>
 					</div>
