--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div class="collapse navbar-collapse" id="mynavBar">
 				<ul class="nav navbar-nav navbar-right">
 					<li id="home-button"><a class="page-scroll" data-toggle="collapse" data-target=".in" href="#home"><span class="link-color">Home</span></a></li>
-					<li id="about-button"><a class="page-scroll" data-toggle="about" href="#About"><span class="link-color">About us</span></a></li>
+					<li id="about-button"><a class="page-scroll" data-toggle="about" href="#about"><span class="link-color">About us</span></a></li>
 					<li id="service-button"><a class="page-scroll" data-toggle="service" href="#services"><span class="link-color">Services</span></a></li>
 					<li id="team-button"><a class="page-scroll" data-toggle="service" href="#team"><span class="link-color">Offers</span></a></li>
 					<li id="contact-button"><a class="page-scroll" data-toggle="contact" href="#contact"><span class="link-color">Contact Us</span></a></li>
@@ -51,7 +51,7 @@
 				<div class="col-sm-6 mouse-button">
 					<a href="#About">
 					<div class="mouse_scroll">
-							<a href="#About">
+							<a href="#about">
 					<div class="mouse">
 						<div class="wheel"></div>
 					</div>
@@ -67,14 +67,35 @@
 			</div>
 		</div>
 	</div>
-	<section class="know-more" id="About">
-	<div class="know-us">
-		<h1 class="text-center">Know us</h1>
-	</div>
-	<p class="know-para">
-		Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-	</p>
-</section>
+	<section class="about" id="about">
+		<h2 class="text-center about-typo">About us</h2>
+		<div class="col-sm-6">
+			<img src="img/demo.jpg" alt="">
+		</div>
+		<div class="col-sm-6 about-box">
+			<div class="about-content">
+			<h3>What is Lorem Ipsum?</h3>
+			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
+					t is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+			</p>
+				
+		</div>
+		</div>
+	</section>
+
+
+	<section id="info" class="info-video">
+			<div id="video">
+			<font size="5px"><center><h1></h1></center></font>
+			<div id="video-section"><center>
+			<video id="video-elem" preload="auto" autoplay="true" loop="loop" muted="muted">
+			<source src="video/promo.mp4">
+			</center>
+			</video>
+			</div>
+			</div>
+			</section>
+						
 </body>
 
 	<script type="text/javascript">
