--- a/index.html
+++ b/index.html
@@ -68,30 +68,56 @@
 			</div>
 		</div>
 	</div>
-	<section class="about" id="about">
-		<h2 class="text-center about-typo " data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="200">About us</h2>
-		<div class="col-sm-6 Aravind-photo" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="200">
-			<img src="img/demo.jpg" alt="" class="">
+	<section class="img-overlap About" id="about">
+		<h2 class="text-center" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400">About Us</h2>
+		<div class="col-lg-6">
+			<img src="./img/home.png" alt="" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400">
 		</div>
-		<div class="col-sm-6 about-box">
-			<div class="about-content " data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="200">
-			<h3>What is Lorem Ipsum?</h3>
-			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
-					t is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
-			</p>
-				
-		</div>
-		</div>
-	</section>
-	<section class="gallery">
-		
-	</section>
+		<div class="col-lg-6">
+			<p class="text" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400">
+				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versi
 
-			<section class="pricing " id="services">
+			</p>
+		</div>
+	</section>
+	
+	<section class="details" id="services">
+			<h2 class="services text-center" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400">Services</h2>
+			<div class="col-lg-4 grid" >
+					<center>
+							<i class="fas fa-home icon " data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400"></i>
+						<h3 data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400">Stay</h3>
+						<p class="serv-text" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400">
+								Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+						</p>
+					</center>
+				</div>
+				<div class="col-lg-4 grid" >
+					<center>
+							<i class="fas fa-utensils icon" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400"></i>
+							<h3 data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400">Cusines</h3>
+							<p class="serv-text" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400">
+									Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+							</p>
+						</center>
+				</div>
+				<div class="col-lg-4 grid">
+					<center>
+							<i class="fas fa-truck-monster icon" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400"></i>
+							<h3 data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400">Adventure</h3>
+							<p class="serv-text" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400">
+									Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+							</p>
+						</center>
+				</div>
+		</section>
+
+
+			<section class="pricing " id="Offers">
 			<center>
-				<h2 data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="200">Our services</h2>
+				<h2 data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400">Our Offers</h2>
 				<div class="container">
-					<div class="col-sm-4 box" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="200">
+					<div class="col-sm-4 box" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400">
 						<div class="card card3">
 							<h3>BASIC</h3>
 							<h2>Free</h2>
@@ -102,7 +128,7 @@
 							<div>Book</div>
 						</div>
 					</div>
-					<div class="col-sm-4 box"data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="200">
+					<div class="col-sm-4 box" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400">
 						<div class="card card3">
 							<h3>PRO</h3>
 							<h2>100</h2>
@@ -114,7 +140,7 @@
 						</div>
 					</div>
 
-					<div class="col-sm-4 box" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="200">
+					<div class="col-sm-4 box" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400">
 						 <div class="card card3">
 							<h3>ULTIMATE</h3>
 							<h2>250</h2>
@@ -128,7 +154,7 @@
 					 </div>
 					 
 					</section>
-</body>
+	</body>
 
 	<script type="text/javascript">
 	$(document).ready(function () {
