--- a/index.html
+++ b/index.html
@@ -110,49 +110,21 @@
 							</p>
 						</center>
 				</div>
+			
 		</section>
+		<section>
+				<p>
+						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
 
+				</p>
+			</section>
 
 			<section class="pricing " id="Offers">
-			<center>
-				<h2 data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400">Our Offers</h2>
-				<div class="container">
-					<div class="col-sm-4 box" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400">
-						<div class="card card3">
-							<h3>BASIC</h3>
-							<h2>Free</h2>
-							<h4>Free</h4>
-							<hr>
-							<p>10 templates</p>
-							<p>Default presets</p>
-							<div>Book</div>
-						</div>
-					</div>
-					<div class="col-sm-4 box" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400">
-						<div class="card card3">
-							<h3>PRO</h3>
-							<h2>100</h2>
-							<h4>$100</h4>
-							<hr>
-							<p>50 templates</p>
-							<p>Pro presets</p>
-							<div>Book</div>
-						</div>
-					</div>
 
-					<div class="col-sm-4 box" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400">
-						 <div class="card card3">
-							<h3>ULTIMATE</h3>
-							<h2>250</h2>
-							<h4>$250</h4>
-							<hr>
-							<p>Unlimited templates</p>
-							<p>Ultimate presets</p>
-							<div>Book</div>
-					 </div>
-					</div>
-					 </div>
-					 
 					</section>
 	</body>
 
