--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="./files/style.css">
 	<script src="./files/jquery.min.js.download"></script>
 	<script src="./files/bootstrap.min.js.download"></script>
+	<!--Font awesome file-->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
