--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<li id="home-button"><a class="page-scroll" data-toggle="collapse" data-target=".in" href="#home"><span class="link-color">Home</span></a></li>
 					<li id="about-button"><a class="page-scroll" data-toggle="about" href="#about"><span class="link-color">About us</span></a></li>
 					<li id="service-button"><a class="page-scroll" data-toggle="service" href="#services"><span class="link-color">Services</span></a></li>
-					<li id="team-button"><a class="page-scroll" data-toggle="service" href="#team"><span class="link-color">Offers</span></a></li>
+					<li id="team-button"><a class="page-scroll" data-toggle="service" href="#Offers"><span class="link-color">Offers</span></a></li>
 					<li id="contact-button"><a class="page-scroll" data-toggle="contact" href="#contact"><span class="link-color">Contact Us</span></a></li>
 				</ul>
 			</div>
@@ -70,12 +70,12 @@
 		</div>
 	</div>
 	<section class="img-overlap About" id="about">
-		<h2 class="text-center" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400">About Us</h2>
+		<h2 class="text-center" >About Us</h2>
 		<div class="col-lg-6">
-			<img src="./img/home.png" alt="" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400">
+			<img src="./img/home.png" alt="" >
 		</div>
 		<div class="col-lg-6">
-			<p class="text" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400">
+			<p class="text" >
 				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versi
 
 			</p>
@@ -83,49 +83,123 @@
 	</section>
 	
 	<section class="details" id="services">
-			<h2 class="services text-center" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400">Services</h2>
+			<h2 class="services text-center" >Services</h2>
 			<div class="col-lg-4 grid" >
 					<center>
-							<i class="fas fa-home icon " data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400"></i>
-						<h3 data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400">Stay</h3>
-						<p class="serv-text" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400">
+							<i class="fas fa-home icon " ></i>
+						<h3>Stay</h3>
+						<p class="serv-text" >
 								Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
 						</p>
 					</center>
 				</div>
 				<div class="col-lg-4 grid" >
 					<center>
-							<i class="fas fa-utensils icon" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400"></i>
-							<h3 data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400">Cusines</h3>
-							<p class="serv-text" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400">
+							<i class="fas fa-utensils icon"></i>
+							<h3 >Cusines</h3>
+							<p class="serv-text" >
 									Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
 							</p>
 						</center>
 				</div>
 				<div class="col-lg-4 grid">
 					<center>
-							<i class="fas fa-truck-monster icon" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400"></i>
-							<h3 data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400">Adventure</h3>
-							<p class="serv-text" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="400">
+							<i class="fas fa-truck-monster icon" ></i>
+							<h3>Adventure</h3>
+							<p class="serv-text">
 									Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
 							</p>
 						</center>
 				</div>
 			
 		</section>
-		<section>
-				<p>
-						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
 
-				</p>
-			</section>
 
-			<section class="pricing " id="Offers">
+					<section class="pricing" id="Offers">
+							<section>
+								<h2 class="text-center">Offers</h2>
+									<div class="container-fluid">
+											<div class="container">
+													<div class="row">
+															<div class="col-sm-4 card1">
+																	<div class="card text-center">
+																			<div class="title">
+																					<i class="fa fa-paper-plane" aria-hidden="true"></i>
+																					<h2>Basic</h2>
+																			</div>
+																			<div class="price">
+																					<h4><i class="fas fa-rupee-sign"></i>250</h4>
+																			</div>
+																			<div class="option">
+																					<ul>
+																							<li> <i class="fa fa-check" aria-hidden="true"></i> Feature #1</li>
+																							<li> <i class="fa fa-check" aria-hidden="true"></i> Feature #1</li>
 
+																					</ul>
+																			</div>
+																			<a href="#">Book Now</a>
+																	</div>
+															</div>
+															<div class="col-sm-4 card1">
+																	 <div class="card text-center">
+																			<div class="title">
+																					<i class="fa fa-paper-plane" aria-hidden="true"></i>
+																					<h2>Standard</h2>
+																			</div>
+																			<div class="price">
+																					<h4><i class="fas fa-rupee-sign"></i>500</h4>
+																			</div>
+																			<div class="option">
+																					<ul>
+																							<li> <i class="fa fa-check" aria-hidden="true"></i> Feature #1</li>
+																							<li> <i class="fa fa-check" aria-hidden="true"></i> Feature #1</li>
+
+																						</ul>
+																			</div>
+																			<a href="#">Book Now</a>
+																			</div>
+																	</div>
+																	<div class="col-sm-4 card1">
+																			<div class="card text-center">
+																					<div class="title">
+																							<i class="fa fa-paper-plane" aria-hidden="true"></i>
+																							<h2>Premium</h2>
+																					</div>
+																					<div class="price">
+																							<h4><i class="fas fa-rupee-sign"></i>750</h4>
+																					</div>
+																					<div class="option">
+																							<ul>
+																									<li> <i class="fa fa-check" aria-hidden="true"></i> Feature #1</li>
+																									<li> <i class="fa fa-check" aria-hidden="true"></i> Feature #1</li>
+
+																							</ul>
+																					</div>
+																			<a href="#">Book Now</a>
+																	</div>
+															</div>
+													</div>
+											</div>
+									</div>
+							</section>
+					</section>
+
+
+					<section class="contact" id="contact">
+						<h2 class="text-center">Contact Us</h2>
+						<div class="col-lg-6"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3932.9212140334985!2d76.90343391472442!3d9.687765593065706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b07b488b1165cb9%3A0x5447ce5e6ea64771!2sAravind+Holidays!5e0!3m2!1sen!2sin!4v1551886642750"  frameborder="0" style="border:0" allowfullscreen></iframe></div>
+						<div class="col-lg-6">
+							<div class="address">
+							<h3 class="text-center address-typo">Address</h3>
+							<address>
+								Aravind Holidays,<br>
+								wagamon.
+							</address>
+						</div>
+						</div>
+					</section>
+					<section class="footer">
+						<h5 class="text-center ">&copy 2019 | Designed by Jobson P. Varghese</h5>
 					</section>
 	</body>
 
