--- a/index.html
+++ b/index.html
@@ -69,152 +69,9 @@
 			</div>
 		</div>
 	</div>
-	<section class="img-overlap About" id="about">
-		<h2 class="text-center" ></h2>
-		<div class="col-lg-6">
-			<img src="./img/home.png" alt="" >
-		</div>
-		<div class="col-lg-6">
-			<div class="text" >
-				<h4></h4>
-				<h5></h5>
-					<h3 class="know">Know About us?</h3>
-				<p>
-				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versi
-				</p>
-			</div>
-		</div>
-	</section>
-	
-	<section class="details" id="services">
-			<h2 class="services text-center" style="  color: rgb(248, 180, 34); font-weight: bold;">Services</h2>
-			<div class="col-lg-4 grid" >
-					<center>
-							<i class="fas fa-home icon " ></i>
-						<h3 class="ser-cap" style="  color: rgb(248, 180, 34); font-weight: bold;">Stay</h3>
-						<p class="serv-text" >
-								We provide you good stay with great ficilities on afordable price.We treat our customer as God.Customers satisfaction is our moto.
-							We provide you good stay with great ficilities on afordable price.We treat our customer as God.Customers satisfaction is our moto.
-						</p>
-					</center>
-				</div>
-				<div class="col-lg-4 grid" >
-					<center>
-							<i class="fas fa-utensils icon"></i>
-							<h3  class="ser-cap" style="  color: rgb(248, 180, 34); font-weight: bold;">Cusines</h3>
-							<p class="serv-text" >
-									We provide you good stay with great ficilities on afordable price.We treat our customer as God.Customers satisfaction is our moto.
-
-									We provide you good stay with great ficilities on afordable price.We treat our customer as God.Customers satisfaction is our moto.
-								</p>
-						</center>
-				</div>
-				<div class="col-lg-4 grid">
-					<center>
-							<i class="fas fa-truck-monster icon" ></i>
-							<h3  class="ser-cap" style="  color: rgb(248, 180, 34); font-weight: bold;">Adventure</h3>
-							<p class="serv-text">
-									We provide you good stay with great ficilities on afordable price.We treat our customer as God.Customers satisfaction is our moto.
-
-									We provide you good stay with great ficilities on afordable price.We treat our customer as God.Customers satisfaction is our moto.
-								</p>
-						</center>
-				</div>
-			
-		</section>
 
 
-					<section class="pricing" id="Offers">
-							<section>
-								<h2 class="text-center">Deals</h2>
-									<div class="container-fluid">
-											<div class="container">
-													<div class="row">
-															<div class="col-sm-4 card1">
-																	<div class="card text-center">
-																			<div class="title">
-																					<i class="fa fa-paper-plane" aria-hidden="true"></i>
-																					<h2>Basic</h2>
-																			</div>
-																			<div class="price">
-																					<h4><i class="fas fa-rupee-sign"></i>250</h4>
-																			</div>
-																			<div class="option">
-																					<ul>
-																							<li> <i class="fa fa-check" aria-hidden="true"></i> Feature #1</li>
-																							<li> <i class="fa fa-check" aria-hidden="true"></i> Feature #1</li>
-
-																					</ul>
-																			</div>
-																			<a href="#">Book Now</a>
-																	</div>
-															</div>
-															<div class="col-sm-4 card1">
-																	 <div class="card text-center">
-																			<div class="title">
-																					<i class="fa fa-paper-plane" aria-hidden="true"></i>
-																					<h2>Standard</h2>
-																			</div>
-																			<div class="price">
-																					<h4><i class="fas fa-rupee-sign"></i>500</h4>
-																			</div>
-																			<div class="option">
-																					<ul>
-																							<li> <i class="fa fa-check" aria-hidden="true"></i> Feature #1</li>
-																							<li> <i class="fa fa-check" aria-hidden="true"></i> Feature #1</li>
-
-																						</ul>
-																			</div>
-																			<a href="#">Book Now</a>
-																			</div>
-																	</div>
-																	<div class="col-sm-4 card1">
-																			<div class="card text-center">
-																					<div class="title">
-																							<i class="fa fa-paper-plane" aria-hidden="true"></i>
-																							<h2>Premium</h2>
-																					</div>
-																					<div class="price">
-																							<h4><i class="fas fa-rupee-sign"></i>750</h4>
-																					</div>
-																					<div class="option">
-																							<ul>
-																									<li> <i class="fa fa-check" aria-hidden="true"></i> Feature #1</li>
-																									<li> <i class="fa fa-check" aria-hidden="true"></i> Feature #1</li>
-
-																							</ul>
-																					</div>
-																			<a href="#">Book Now</a>
-																	</div>
-															</div>
-													</div>
-											</div>
-									</div>
-							</section>
-					</section>
-
-
-					<section class="contact" id="contact">
-						<h2 class="text-center">Contact Us</h2>
-						<div class="col-lg-6"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3932.9212140334985!2d76.90343391472442!3d9.687765593065706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b07b488b1165cb9%3A0x5447ce5e6ea64771!2sAravind+Holidays!5e0!3m2!1sen!2sin!4v1551886642750"  frameborder="0" style="border:0" allowfullscreen></iframe></div>
-						<div class="col-lg-6">
-							<div class="address">
-							<h3 class="text-center address-typo">Reach us</h3>
-							<address>
-								Aravind Holidays,<br>
-								Lorem ipsum, dolor sit <br>
-								Lorem ipsum, dolor sit <br>
-
-								Lorem ipsum, dolor sit <br>
-
-								wagamon.
-							</address>
-						</div>
-						</div>
-					</section>
-					<section class="footer">
-						<h5 class="text-center ">&copy 2019 | Designed by Jobson P. Varghese</h5>
-					</section>
+	<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora molestiae dignissimos vero culpa omnis sapiente esse ullam alias eius. Doloremque nemo hic consequatur architecto illo minus ipsum sequi culpa qui?</p>
 	</body>
 
 	<script type="text/javascript">
